# msspeech-gbridge

./: .gitignore  CMakeLists.txt  README.md  audioqueue.cpp  audioqueue.h  googlecloudspeechserviceimpl.cpp  googlecloudspeechserviceimpl.h  msspeech-gbridge.cpp  msspeechrecoconfig.cpp  msspeechrecoconfig.h  msspeechsession.cpp  msspeechsession.h  msspeechsessionfactory.cpp  msspeechsessionfactory.h  msspeechsessionhandler.h  streamingrpcrequesthandler.cpp  streamingrpcrequesthandler.h  syncrpcrequesthandler.h
docker/: Dockerfile  Makefile  run.sh
examples/csharp/: Program.cs  QuickStart.csproj  README.md
examples/go/: README.md  stream.go
examples/python/: README.md  transcribe.py  transcribe_streaming.py
src/: googlecloudspeechserviceimpl.cpp  googlecloudspeechserviceimpl.h  msspeech-gbridge-cli.cpp  msspeech-gbridge-cli.h  msspeech-gbridge.cpp  msspeechrecoconfig.cpp  msspeechrecoconfig.h  msspeechsession.cpp  msspeechsession.h  msspeechsessionfactory.cpp  msspeechsessionfactory.h  msspeechsessionhandler.h  streamingrpcrequesthandler.cpp  streamingrpcrequesthandler.h  syncrpcrequesthandler.cpp  syncrpcrequesthandler.h
